added some content to pune biological park

--- a/pune/biological_park.html
+++ b/pune/biological_park.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "icon" href ="../images/page genral contents/region-code.png" type = "image/x-icon" background-color="white";>
+    <link rel="icon" href="../images/page genral contents/region-code.png" type="image/x-icon" background-color="white"
+        ;>
     <title>Pune | Biological Park </title>
     <link rel="stylesheet" href="css/biological_park.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- navigation bar content -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
@@ -27,6 +30,32 @@
             <li class="header" id="feedback"><a href="#footer">feedback</a></li>
         </ul>
     </nav>
-    
+    <div class="pane" id="pane">
+        <h2 class="r3">Katraj Snake Park and Rajiv Gandhi zoological park</h2>
+        <div id="img">
+
+        </div>
+        <h3 class="r24 bmn">Rechablity</h3>
+        <h4 class="r2 tmn">Katraj Snake Park </h4>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3784.6628222130826!2d73.85944286451338!3d18.45361218744799!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2eac3b798a639%3A0x2ca4c5e0a9c32d8c!2sKatraj%20Snake%20Park%20Lake!5e0!3m2!1sen!2sin!4v1613924387702!5m2!1sen!2sin"
+            id="map1" class="map">
+        </iframe>
+        <h4 class="r2">Rajiv Gandhi Zoological Park</h4>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3817.622110928617!2d73.85860584019437!3d18.45248024464059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2eac307f7a82f%3A0x3ac431343224b00b!2sRajiv%20Gandhi%20Zoological%20Park%20and%20wildlife%20research%20center%2Ckatraj!5e0!3m2!1sen!2sin!4v1613926314287!5m2!1sen!2sin"
+            id="map2" class="map">
+        </iframe>
+        <div class="hotelp" id="hotelp">
+            <h2 class="hotph">hotels in pune</h2>
+            <p class="hotpnp" id="hotpnp1">Pune is a city where anyone can find their hotel according to their budget
+                the range starts from INR800 and goes up to INR11000 so there is a lot of variety. Some of the hotels
+                are listed below: </p>
+        </div>
+
+
+    </div>
+
 </body>
+
 </html>
