--- a/pune/biological_park.html
+++ b/pune/biological_park.html
@@ -35,7 +35,14 @@
         <div id="img">
 
         </div>
-        <h3 class="r24 bmn">Rechablity</h3>
+        <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Rechablity</h3>
+            <p class="r1 bmn">Both the Rajiv Gandhi Zoological Park and Katraj snake park are situsted near to each
+                other
+                and is in
+                walking distance. The reachablity of both the places are good, no matter how you travel means in taxi or
+                in public transport.</p>
+        </div>
         <h4 class="r2 tmn">Katraj Snake Park </h4>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3784.6628222130826!2d73.85944286451338!3d18.45361218744799!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2eac3b798a639%3A0x2ca4c5e0a9c32d8c!2sKatraj%20Snake%20Park%20Lake!5e0!3m2!1sen!2sin!4v1613924387702!5m2!1sen!2sin"
@@ -47,14 +54,39 @@
             id="map2" class="map">
         </iframe>
         <div class="hotelp" id="hotelp">
-            <h2 class="hotph">hotels in pune</h2>
-            <p class="hotpnp" id="hotpnp1">Pune is a city where anyone can find their hotel according to their budget
-                the range starts from INR800 and goes up to INR11000 so there is a lot of variety. Some of the hotels
-                are listed below: </p>
+            <h2 class="hotph r24">hotels in pune</h2>
+            <p class="hotpnp r1" id="hotpnp1">Pune is a city where anyone can find their hotel according to their budget
+                the range starts from &#8377;800 and goes up to &#8377;11000 so there is a lot of variety to choose
+                from.
+            </p>
+            <ul class="hotpn r1" id="hotpn">
+                <h2 class="tmn bmn"> Popular hotels in Pune</h2>
+                <li><a href="https://www.google.com/travel/hotels/s/yGVwq">Radisson Blu Hotel Pune Kharadi</a></li>
+                <li><a href="https://www.google.com/travel/hotels/s/cjmA7">Novotel Pune Nagar Road</a></li>
+                <li><a href="https://www.google.com/travel/hotels/s/RKGwc">Smart Inn - A Budget Hotel</a></li>
+                <li><a href="https://www.google.com/travel/hotels/s/m3V1j">Hyatt Pune</a></li>
+            </ul>
         </div>
 
 
     </div>
+    <footer class="footer" id="footer">
+        <h2 class="r2 nm">Follow us on </h2>
+        <div class="fof">
+            <div class="sm"><a href="https://www.facebook.com/"><img src="./images/logo/facebook.png" alt=""></a>
+            </div>
+            <div class="sm"><a href="https://github.com/avinashkkumar/semfourproject"><img
+                        src="./images/logo/github.png" alt=""></a></div>
+            <div class="sm"><a href="https://www.instagram.com"><img src="./images/logo/instagram.png" alt=""></a>
+            </div>
+            <div class="sm"><a href="https://www.linkedin.com"><img src="./images/logo/linkedin.png" alt=""></a>
+            </div>
+            <div class="sm"><a href="https://www.pinterest.com"><img src="./images/logo/pinterest.png" alt=""></a>
+            </div>
+            <div class="sm"><a href="https://www.youtube.com"><img src="./images/logo/youtube.png" alt=""></a></div>
+            <div class="sm"><a href="https://www.twitter.com"><img src="./images/logo/twitter.png" alt=""></a></div>
+        </div>
+    </footer>
 
 </body>
 
