--- a/pune/biological_park.html
+++ b/pune/biological_park.html
@@ -36,8 +36,8 @@
 
         </div>
         <div class="reach bmn" id="reach">
-            <h3 class="r24 bmn">Rechablity</h3>
-            <p class="r1 bmn">Both the Rajiv Gandhi Zoological Park and Katraj snake park are situsted near to each
+            <h3 class="r24 bmn">Reachablity</h3>
+            <p class="r1 bmn">Both the Rajiv Gandhi Zoological Park and Katraj snake park are situated near to each
                 other
                 and is in
                 walking distance. The reachablity of both the places are good, no matter how you travel means in taxi or
@@ -54,7 +54,7 @@
             id="map2" class="map">
         </iframe>
         <div class="hotelp" id="hotelp">
-            <h2 class="hotph r24">hotels in pune</h2>
+            <h2 class="hotph r24">Hotels in Pune</h2>
             <p class="hotpnp r1" id="hotpnp1">Pune is a city where anyone can find their hotel according to their budget
                 the range starts from &#8377;800 and goes up to &#8377;11000 so there is a lot of variety to choose
                 from.
