--- a/pune/biological_park.html
+++ b/pune/biological_park.html
@@ -41,7 +41,7 @@
                 other
                 and is in
                 walking distance. The reachablity of both the places are good, no matter how you travel means in taxi or
-                in public transport.</p>
+                in public transport.Opening hours-10am-6pm</p>
         </div>
         <h4 class="r2 tmn">Katraj Snake Park </h4>
         <iframe
