added changes to pune place 1 and 2 code:0

--- a/pune/biological_park.html
+++ b/pune/biological_park.html
@@ -31,6 +31,14 @@
         </ul>
     </nav>
     <div class="pane" id="pane">
+        <div class="otherplaces">
+            <ul class="pn">
+                <li class="other r1 present" id="other1"><a href="./biological_park.html">Biological Park</a></li>
+                <li class="other r1" id="other1"><a href="./monuments.html">Monuments</a></li>
+                <li class="other r1" id="other2"><a href="./trek_and_gardern.html">Trek and Garderns</a></li>
+                <li class="other r1" id="other3"><a href="./waterbodies.html">Waterbodies</a></li>
+            </ul>
+        </div>
         <h2 class="r3">Katraj Snake Park and Rajiv Gandhi zoological park</h2>
         <div id="img">
 
@@ -38,10 +46,19 @@
         <div class="reach bmn" id="reach">
             <h3 class="r24 bmn">Reachablity</h3>
             <p class="r1 bmn">Both the Rajiv Gandhi Zoological Park and Katraj snake park are situated near to each
-                other
-                and is in
-                walking distance. The reachablity of both the places are good, no matter how you travel means in taxi or
-                in public transport.</p>
+                other and is in walking distance. The reachablity of both the places are good, no matter how you travel
+                means in taxi or in public transport.
+            </p>
+            <table class="itble class r1">
+                <tr>
+                    <td class="r1">Avrage visiting time</td>
+                    <td class="r1">3 Hours</td>
+                </tr>
+                <tr>
+                    <td class="r1">Ticket</td>
+                    <td class="r1">&#8377; 50 </td>
+                </tr>
+            </table>
         </div>
         <h4 class="r2 tmn">Katraj Snake Park </h4>
         <iframe
@@ -67,8 +84,6 @@
                 <li><a href="https://www.google.com/travel/hotels/s/m3V1j">Hyatt Pune</a></li>
             </ul>
         </div>
-
-
     </div>
     <footer class="footer" id="footer">
         <h2 class="r2 nm">Follow us on </h2>
