--- a/pune/biological_park.html
+++ b/pune/biological_park.html
@@ -44,6 +44,11 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                The Rajiv Gandhi Zoological Park, commonly known as the Rajiv Gandhi Zoo or Katraj Zoo, is located in
+                Katraj, Pune district, Maharashtra State, India. It is managed by the Pune Municipal Corporation.
+            </p>
             <h3 class="r24 bmn">Reachablity</h3>
             <p class="r1 bmn">Both the Rajiv Gandhi Zoological Park and Katraj snake park are situated near to each
                 other and is in walking distance. The reachablity of both the places are good, no matter how you travel
